--- a/admin/css/admin_style.css
+++ b/admin/css/admin_style.css
@@ -13,10 +13,15 @@ a:hover {
 	border-bottom: 1px solid #f5f5f5;
 	text-decoration: none;
 }
+body{
+    box-sizing: border-box;
+}
 /************************ Setting 1rem = 10px ******************/
 html {
     font-size: 62.5%;
 }
+
+/**********************Upload Form **************************/
 
 #content{
     width:50%;
@@ -34,3 +39,21 @@ form div{
     
     margin-top: 0.5rem;
 }
+/************************IMAGES Galery*************************/
+
+.wrapperImg{
+    width: 70rem;
+    padding: 5px;
+    margin : 1.5rem auto;
+    border: 1px solid #cbcbcb;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-row-gap: 2rem;
+    
+}
+.galeryImg{
+    width: 35rem;
+    height:30rem;
+    margin:auto;
+}
+
