--- a/css/style.css
+++ b/css/style.css
@@ -82,7 +82,9 @@ body{
     font-size: 100%;
     line-height: 26px;
     border-bottom: 2px solid black;
+/*     margin: 2rem auto;*/
 }
+
 
 .colH{
     
