--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,12 @@ body{
     box-sizing: border-box;
     width:80%;
     margin: auto;
+    background-size:cover;
+	background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(../img/red2.jpg) center;
+	background-attachment: fixed;
+    background-repeat: no-repeat;
+/*    height:100vh;*/
+    height: 100%;
 }
 
 
