--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ body{
     width:80%;
     margin: auto;
     background-size:cover;
-	background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(../img/red2.jpg) center;
+	background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(../img/pexels-photo-851219.jpeg) center;
 	background-attachment: fixed;
     background-repeat: no-repeat;
 /*    height:100vh;*/
