--- a/admin/css/admin_style.css
+++ b/admin/css/admin_style.css
@@ -13,8 +13,14 @@ a:hover {
 	border-bottom: 1px solid #f5f5f5;
 	text-decoration: none;
 }
+/************************ Setting 1rem = 10px ***************/
+html {
+    font-size: 62.5%;
+}
 body{
     box-sizing: border-box;
+    width:150rem;
+    margin: auto;
 }
 /************************ Setting 1rem = 10px ***************/
 html {
