--- a/css/style.css
+++ b/css/style.css
@@ -101,6 +101,10 @@ strong{
     width: 20rem;
     
 }
+.adres{
+    
+    margin-left:1.5rem;
+}
 
 
 /* ------------------- SHARE BUTTONS ------------------------------ */
