--- a/admin/css/admin_style.css
+++ b/admin/css/admin_style.css
@@ -19,12 +19,15 @@ html {
 }
 body{
     box-sizing: border-box;
-    width:150rem;
+    width:100%;
     margin: auto;
 }
 /************************ Setting 1rem = 10px ***************/
 html {
     font-size: 62.5%;
+}
+.size{
+    font-size: 1.5rem;
 }
 
 /************************MENU****************************/
@@ -100,6 +103,13 @@ form div{
 .col5 {
     background-color: #9E9E9E;
 }
+/***************************************BUTTONS*****************************/
+
+.btn,
+label{
+      font-size: 1.5rem;
+       margin: 1rem;
+}
 
 
 /**********BUTTONS Treatments***********/
@@ -153,38 +163,11 @@ form div{
     height: 100px;
 }
 
-/**********slider************/
-#slider-demo {
 
-  box-shadow: inset 8px 4px 16px #333;
-
-  border-bottom: #eee solid 1px;
-
+/****************************ERRORS*************************************/
+.errors{
+    font-size: 1.5rem;
+    margin: 1rem;
+    color:red;
 }
-
- 
-
-#slider-demo .follow_bar {
-
-  background-color: #693;
-
-  box-shadow: inset 0 1px 3px #222;
-
-}
-
- 
-
-.sglide-buttons {
-
-  vertical-align: middle;
-
-  border-radius: 9px;
-
-}
-
- 
-
-.sglide-buttons:hover,
-.sglide-buttons:active { background-color: #fff; }
-
 
