--- a/admin/css/admin_style.css
+++ b/admin/css/admin_style.css
@@ -81,7 +81,7 @@ form div{
 /***********************TREATMENTS*****************************/
 .wrapperTreatments{
     display: grid;
-    grid-template-columns: 0.5fr 2fr 5fr 1fr 1fr 0.5fr 0.5fr;
+    grid-template-columns: 0.5fr 2fr 5fr 1fr 0.5fr 0.5fr;
     grid-row-gap: 2rem;
     justify-content: space-between;
 
@@ -101,22 +101,24 @@ form div{
 
 }
 .col1 {
-    background-color:  #a98357;
+    background-color:  #d0d3b6;
 }
 .col2 {
-    background-color: #af8b62;
+    background-color: #d7d9c0;
 }
 .col3 {
-    background-color: #b5946d;
+    background-color: #dde0cb;
 }
 .col4 {
-    background-color: #ba9c79;
+    background-color: #e4e6d6;
 }
+/*
 .col5 {
     background-color: #c0a484;
 }
+*/
 .col6 {
-    background-color: #c6ac8f;
+    background-color: #ebede0;
 }
 /***************************************BUTTONS*****************************/
 
