share button fixed

--- a/admin/css/admin_style.css
+++ b/admin/css/admin_style.css
@@ -101,16 +101,16 @@ form div{
 
 }
 .col1 {
-    background-color:  #d0d3b6;
+    background-color:  #ccb59a;
 }
 .col2 {
-    background-color: #d7d9c0;
+    background-color: #d1bda6;
 }
 .col3 {
-    background-color: #dde0cb;
+    background-color: #d7c5b1;
 }
 .col4 {
-    background-color: #e4e6d6;
+    background-color: #ddcebc;
 }
 /*
 .col5 {
@@ -118,7 +118,7 @@ form div{
 }
 */
 .col6 {
-    background-color: #ebede0;
+    background-color: #e3d6c7;
 }
 /***************************************BUTTONS*****************************/
 
