--- a/css/style.css
+++ b/css/style.css
@@ -54,14 +54,12 @@ main{
 /****************MENU******************************/
 
 .menu-wrapper{
-        padding-top: 5rem; 
+    padding-top: 5rem; 
     margin:auto;
 }
 .menu-wrapper div{
     display: inline-block;
     padding: 0 2.5%;
-    max-width: 100%;
-    height: : 100%;
 }
 .contact-wrapper{
     
@@ -138,6 +136,15 @@ p.overOns{
 
 
 /******************************TreatmentView**********************************/
+section{
+    width:80%;
+    margin:auto;
+    padding: 5rem;
+    
+    border-left:2px solid black;
+    border-right:2px solid black;
+    
+}
 .wrapperTreatment{
     display: grid;
     grid-template-columns: 2fr 3fr 1fr ;
@@ -148,19 +155,16 @@ p.overOns{
 }
 .box{
     display: inline-block;
-    
-/*    color: #212121;*/
     padding: 0.5rem;
     font-size: 100%;
     line-height: 2.6rem;
     border-bottom: 2px solid black;
-/*     margin: 2rem auto;*/
+
 }
 
 
 .colH{
-    
-/*    font-weight: bold;*/
+
     font-family: 'Dancing Script', cursive;
     font-size: 3rem;
     margin-top:1.5rem;
@@ -228,21 +232,36 @@ p.overOns{
 }
 
 /************************************************************LAPTOP SCREEN: ***********************************************/
-/*
 
-@media (max-width: 1400px) {
- ***************MENU*****************************
+@media (max-width: 50rem) {
+.overOns{
+    width:100%;
+}
+.slide{
+    width:100%;
+}
+}
 
-.menu-wrapper{
+@media (max-width: 35rem) {
     
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-row-gap: 0.2rem; 
-    padding-top:5.7rem;
-    margin:auto;
+    section{
+        width:100%;
+         padding:1rem;
+    }  
+    .colH{
+        font-size: 2rem;
+        font-weight:bold;
+    }
+    
 }
-.contact-wrapper{
-    display: inline;
 
+
+@media (max-width: 31.5rem) {
+    main{
+        
+        padding:1rem;
+    }
+    .share-wrapper{
+    grid-template-columns: 1fr 1fr;
+    }
 }
-*/
