--- a/admin/css/admin_style.css
+++ b/admin/css/admin_style.css
@@ -32,7 +32,7 @@ body{
 .header{
     padding-top: 6rem;
     display:grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
     
 }
 .logo{
