--- a/admin/css/admin_style.css
+++ b/admin/css/admin_style.css
@@ -31,9 +31,15 @@ body{
 /************************MENU****************************/
 .header{
     padding-top: 6rem;
+/*
     display:grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+*/
     
+}
+.header div{
+    
+    display:inline-block;
 }
 .logo{
     float:left;
@@ -47,9 +53,15 @@ h1{
     border: 2px solid #a98357; 
     background-color: transparent;
     color: #a98357;
+    
 }
 .btn:hover{
     background-color: #a98357;
+    color: white;
+    border: 2px solid #71583a;
+}
+.btn:active{
+    background-color: yellowgreen;
     color: white;
     border: 2px solid #71583a;
 }
