--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,6 @@ main{
 /************************************ BUTTONS *********************************/
 
 /****************MENU******************************/
-
 .menu-wrapper{
     padding-top: 5rem; 
     margin:auto;
@@ -63,10 +62,13 @@ main{
 }
 .contact-wrapper{
     
+    display: -ms-grid;
+    
     display: grid;
+    -ms-grid-template-columns: 1fr 1fr 1fr;
     grid-template-columns: 1fr 1fr 1fr;
     grid-row-gap: 0.2rem; 
-    padding-top:7rem;
+    padding-top:3.5rem;
 }
 .clearfix::after {
     content: "";
@@ -90,10 +92,6 @@ main{
 }
 .btn:hover{
     background-color: #71583a;
-    border: 3px solid #71583a;
-}
-.btn:active{
-    background-color: yellow !important;
 }
 
 .adres{
@@ -124,13 +122,18 @@ p.overOns{
 
 /* ------------------- SHARE BUTTONS ------------------------------ */
 
+
 .share-wrapper{
-    
+    width:62%;
+    display: -ms-grid;
     display: grid;
+    -ms-grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-row-gap: 0.2rem;
+    grid-row-gap: 0.2rem; 
+    margin:auto
     
 }
+
 
 
 /******************************TreatmentView**********************************/
@@ -144,19 +147,22 @@ section{
     
 }
 .wrapperTreatment{
+    display: -ms-grid;
     display: grid;
+    -ms-grid-template-columns: 2fr 3fr 1fr ;
     grid-template-columns: 2fr 3fr 1fr ;
     font-size: 1.5rem;
     font-family: 'raleway';
-
-  
 }
+  
+
 .box{
     display: inline-block;
     padding: 0.5rem;
     font-size: 100%;
-    line-height: 2.6rem;
+    line-height: 2rem;
     border-bottom: 2px solid black;
+    padding-top: 2rem;
 
 }
 
@@ -190,16 +196,16 @@ section{
     opacity: 0;
 }
 /**************************************GALERY*************************************/
-
 .wrapperImg{
     width: 70rem;
     padding: 5px;
     margin : 1.5rem auto;
     border: 1px solid #cbcbcb;
+    display: -ms-grid;
     display: grid;
+    -ms-grid-template-columns: 1fr 1fr;
     grid-template-columns: 1fr 1fr;
     grid-row-gap: 2rem;
-    
 }
 .galeryImg{
     width: 35rem;
@@ -210,6 +216,7 @@ section{
     font-size: 2rem;
     font-family: 'raleway';
     text-align: justify;
+    text-justify: auto;
     background-color: white;
     padding: 2rem;
 }
@@ -218,7 +225,10 @@ section{
 
 .socialeMedia-wrapper{
     
+    display: -ms-grid;
+    
     display: grid;
+    -ms-grid-template-columns: 2fr 1fr 1fr;
     grid-template-columns: 2fr 1fr 1fr;
     padding-top: 5rem;
 }
@@ -229,37 +239,53 @@ section{
     padding-top: 2rem;
 }
 
-/************************************************************LAPTOP SCREEN: ***********************************************/
 
-@media (max-width: 50rem) {
-.overOns{
-    width:100%;
-}
-.slide{
-    width:100%;
-}
+
+/************************************************************SMALL SCREENS: ***********************************************/
+
+@media all and (max-width: 800px){
+    .overOns{
+        width:100%;
+    }
+    .slide{
+        width:100%;
+    }
+    .share-wrapper{
+       width:100%;
+    }
+
 }
 
-@media (max-width: 35rem) {
+@media all and (max-width: 660px){
     
     section{
         width:100%;
-         padding:1rem;
+        padding:1rem;
     }  
     .colH{
         font-size: 2rem;
         font-weight:bold;
     }
-    
-}
-
-
-@media (max-width: 31.5rem) {
     main{
-        
         padding:1rem;
+        
+    }
+
+    .contact-wrapper{
+    padding-top: 2rem;
+    -ms-grid-template-columns: 1fr;
+    grid-template-columns: 1fr;
+    margin:auto;
+
+}
+    .contact-wrapper h3{
+        
+        margin: 1rem auto;
     }
     .share-wrapper{
-    grid-template-columns: 1fr 1fr;
+        -ms-grid-template-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+
+        
     }
 }
